# virtual-wards-statistics

./: .gitignore  LICENSE  Procfile  README.md  config.yml  pyproject.toml  requirements.txt  wsgi.py  wsgi_dev.py
data/processed/: virtual_ward_statistics.csv
data/raw/: ~$2023_07_Monthly_Virtual_Ward.xlsx
data/staging/: 2023_07.csv  2023_08.csv  2023_09.csv  2023_10.csv  2023_11.csv  2023_12.csv  2024_01.csv  2024_02.csv
notebooks/: development.ipynb
wardstats/: __init__.py  app.py  combine_data.py  components.py  config.py  extract_raw_data.py  transform_data.py  utils.py
wardstats/assets/: typography.css
