[tool.poetry]
name = "wardstats"
version = "0.1.0"
description = "A mini dashboard to show publicly available NHS Statistics on virtual wards usage."
authors = ["alarthast <146962159+alarthast@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26.4"
pandas = "^2.2.1"
dash = "^2.16.1"
plotly = "^5.20.0"
geopandas = "^0.14.3"
dash-bootstrap-components = "^1.5.0"
bs4 = "^0.0.2"
openpyxl = "^3.1.2"
gunicorn = "^23.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
